<?xml version="1.0" encoding="utf-8"?>
<resources>


    <!--Activity/Fragment Names-->
    <string name="fragment_overviewList">Work Order List</string>


    <string name="app_name">AiM Lite Mobile</string>
    <string name="login_title">Welcome</string>
    <string name="list_title">Work Orders</string>
    <string name="detail_id">Phase ID:</string>
    <string name="detail_status">Status:</string>
    <string name="detail_priority">Priority:</string>
    <string name="detail_est">Est:</string>
    <string name="detail_shop">Shop:</string>
    <string name="detail_work_code">Work Code:</string>
    <string name="detail_date_created">Created:</string>
    <string name="action_queue_activity_title">Action Queue</string>
    <string name="add_action_activity_title">New Time</string>
    <string name="edit_action_activity_title">Edit Time</string>
    <string name="detail_activity_title">Work Order Detail</string>
    <string name="settings_activity_title">Settings</string>



    <string name="icon_daily">&#xf0f4;</string>
    <string name="icon_backlog">&#xf16c;</string>
    <string name="icon_admin">&#xf01e;</string>
    <string name="icon_recentlyCompleted">&#xf046;</string>
    <string name="icon_notices">&#xf0f3;</string>
    <string name="icon_timeLog">&#xf017;</string>
    <string name="icon_home">&#xf015;</string>
    <string name="icon_search">&#xf002;</string>
    <string name="icon_chart">&#xf080;</string>
    <string name="icon_sort">&#xf0dc;</string>
    <string name="icon_exclamation">&#xf12a;</string>

    <string name="icon_moveToDaily">&#xf0aa;</string>
    <string name="icon_moveToBacklog">&#xf0ab;</string>
    <string name="icon_user">&#xf007;</string>
    <string name="icon_password">&#xf023;</string>
    <string name="icon_settings">&#xf013;</string>
    <string name="icon_logout">&#xf08b;</string>
    <string name="icon_refresh">&#xf021;</string>
    <string name="icon_submit">&#xf0ee;</string>
    <string name="icon_recent">&#xf022;</string>

    <string name="icon_recentBarExpand">&#xf077;</string>
    <string name="icon_recentBarCollapse">&#xf078;</string>

    <string name="icon_list">&#xf0ca;</string>

    <!--Add Action Fragment-->
    <string name="add_action_spinner_action_prompt">Select Action</string>
    <string name="add_action_spinner_status_prompt">Select New Status</string>
    <string name="add_action_spinner_timetype_prompt">Time Type</string>

    <!--Nav Drawer-->
    <string name="drawer_close">open drawer</string>
    <string name="drawer_open">close drawer</string>


</resources>
